# gagp_copying_suras

./: README.md
ga/gpp/cgaframework/: .gitignore  CMakeLists.txt  Creator.cpp  Creator.h  cgaframe.cpp
ga/gpp/cgaframework/frame/: FrRandom.cpp  FrRandom.h  FrSubjView.cpp  FrSubjView.h  FrSubject.cpp  FrSubject.h  GaAppTpl.h  SubjDef.h
ga/gpp/tspgrf/: CMakeLists.txt  Creator.cpp  Creator.h  TspApp.cpp  TspApp.h  ViewTsp.cpp  ViewTsp.h  cgaframe.cpp  product.txt  result01.txt
ga/gpp/tspgrf/frame/: FrRandom.cpp  FrRandom.h  FrSubjView.cpp  FrSubject.cpp  FrSubject.h  GaAppTpl.h  SubjDef.h
